--- a/views/partials/admin/sidebar.ejs
+++ b/views/partials/admin/sidebar.ejs
@@ -47,7 +47,7 @@
             </li>
             
             <li class="nav-item">
-                <a class="nav-link" href="#">
+                <a class="nav-link" href="/admin/orders">
                     <span data-feather="file"></span>
                     Orders
                 </a>
